--- a/css/common.css
+++ b/css/common.css
@@ -6,26 +6,27 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
-  font-family:'メイリオ', 'Meiryo', sans-serif;
+  font-family: 'メイリオ', 'Meiryo', sans-serif;
 }
 
 .container-fluid, .container {
   padding: 0;
 }
 
+h1,h2,h3,h4,p {
+  font-weight: 400;
+}
+
 h1 {
   font-size: 46px;
-  font-weight: 400;
-  /* line-height: 2; */
 }
 
 h2 {
-  font-size: 46px;
-  /* line-height: 2; */
+  font-size: 39x;
 }
 
 h3 {
-  font-size: 32px;
+  font-size: 24px;
 }
 
 h4 {
@@ -34,8 +35,7 @@ h4 {
 
 p {
   font-size: 16px;
-  line-height: 1.3;
-  margin-bottom: 3%;
+  line-height: 1.6;
 }
 
 ul {
@@ -52,92 +52,110 @@ ul a:hover {
 
 /* メイン画像 */
 /* 背景動画設定 */
+
+div.header {
+  margin: 0;
+  height: auto;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+div.header img {
+  object-fit: cover;
+  width: 100%;
+  height: 600px;
+}
+
 /* 背景動画を暗くする設定 */
 div.main_video {
-  background: rgba(0, 0, 0, 0.5);
-  height: 900px;
-  margin-bottom: 10px;
+  position: absolute;
+  margin: 0 auto;
+  width: 90%;
+  height: 600px;
+  top: 0;
+  left: 5%;
+  z-index: 1;
 }
 
 /* 背景画像設定 */
 video {
-  position: relative;
   min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: 900px;
+  height: 600px;
+  margin: 0 auto;
   top: 0;
-  z-index: -100;
+  z-index: 0;
   object-fit: cover;
 }
 
-/* 動画再生ボタン */
-#video_btn {
-  text-align: center;
+/* ロゴ＆ポッドキャスト */
+div.logo_podcast {
+  display: flex;
+  flex-wrap: wrap;
   position: absolute;
-  right: 2%;
-  bottom: 8%; /*コントローラー分下部に余白を*/
-  border: 2px solid white;
-  border-radius: .5em; 
-  font-size: 16px;
-  color: white;
-  background-color: transparent;
-  width: 100px;
-  height: 50px;
-  padding: 0 10px 0 0;
+  margin: 0 auto;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, -20%);
+  padding: 20px;
+  height: 3 00px;
+  z-index: 1;
 }
 
-#video_btn::before {
-  content: url( 'data:image/svg+xml;utf-8,<svg width="1em" height="1em" class="bi bi-caret-right-fill" fill="%23fff" xmlns="http://www.w3.org/2000/svg"><title>folder</title><g><g><path d="M12.14 8.753l-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/></g></g></svg>' );
-  border-style: none;
-  display: block;
-  position: absolute;
-  top: 50%;
-  right: 25%;
-  transform: translateY(-50%);
-  width: 3px;
-  height: 20px;
-}
- 
-#video_btn.pause {
-  position: absolute;
-  right: 2%;
-  bottom: 8%; /*コントローラー分下部に余白を*/
-  border: 2px solid white;
-  border-radius: .5em; 
-  color: white;
-  background-color: transparent;
-  width: 100px;
-  height: 50px;
-  padding: 0 10px 0 0;
+div.logo_podcast img {
+  width: 60%;
+  height: auto;
+  margin: auto;
+  object-fit: cover;
 }
 
-#video_btn.pause::before {
-  content: url( 'data:image/svg+xml;utf-8,<svg width="1em" height="1em" class="bi bi-caret-right-fill" fill="%23fff" xmlns="http://www.w3.org/2000/svg"><title>folder</title><g><g><path d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z"/></g></g></svg>' );
-  border-style:none;
-  display:block;
-  position:absolute;
-  top: 50%;
-  right: 25%;
-  transform: translateY(-50%);
-  width: 3px;
-  height: 20px;
+.school_svg {
+  fill: rgba(46, 221, 54, 0.575);
+}
+
+.school_svg:hover  {
+  fill: rgba(159, 212, 162, 0.575);
+}
+
+div.podcast a {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  width: 180px;
+  height: auto;
+  padding: 0.5em 0.5em;
+  text-decoration: none;
+  border:solid 1px white;
+  border-radius: 3px;
+  margin-left: 10px;
+  background-color: rgba(131,121,105,0);
+}
+
+div.podcast a:hover {
+  color: white;
+  width: 180px;
+  background-color: rgba(131,121,105,0.9);
 }
 
 /* 画像内の埋め込みテキスト */
 div.contents {
   position: absolute;
-  top: 50%;
-  left: 30%;
-  transform: translate(-50%, -30%);
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -40%);
   color: #ffffff;
   padding: 20px;
-  width: 500px;
-  height: 500px;
+  height: 600px;
+  z-index: 1;
 }
 
-div.contents h1 {
-  font-weight: 800;
+div.contents h2 {
+  font-size: 39px;
+}
+
+div.contents h4 {
+  margin-bottom: 10%;
 }
 
 div.contents a {
@@ -149,384 +167,644 @@ div.contents p {
   padding: 20px 0;
 }
 
-div.contents p::after {
-  content: "▶";
-  padding-left: 10px;
-
+div.contents .btn_square {
+  display: inline-block;
+  font-size: 24px;
+  padding: 0.5em 2em;
+  text-decoration: none;
+  background: #6FC173;/*ボタン色*/
+  color: #FFF;
+  border-radius: 3px;
+  box-shadow: 0 3px 0 rgba(136,136,136,1);
 }
 
-div.contents label {
-  font-weight: 600;
+/*ボタンを押したとき*/
+  div.contents .btn_square:hover {
+  box-shadow: none;
+  transform: translate3d(0, 3px, 0);
 }
 
-/* 背景動画内のメールフォーム */
-div.input_group {
-  position: relative;
-  height: 50px;
+/* コース概要 */
+div.course_descs {
+  margin: 5% auto;
+  min-width: 780px;
+  max-width: 780px;
 }
 
-input.input_email {
-  position: absolute;
-  height: 3em;
-  border: none;
-}
-
-div.input_button {
-  position: absolute;
-  right: 0;
-  background: #ffffff;
-  padding: 5px 20px;
-  margin: auto;
-  height: 3em;
-}
-
-div.input_button button {
-  background: #bbdadc;
-  color: #ffffff;
-}
-
-div.charge {
-  position: absolute;
-  color: #ffffff;
-}
-
-/* ナビゲーションバー */
-.navbar {
-  position: absolute;
-  top: 0;
-  z-index: 10;
-  display: flex;
-  width: 100%;
-  margin: auto; 
-  background:rgba(255,0,0,0);
-}
-
-nav.navbar a {
-  color: white;
-  font-size: 14px;
-  font-weight: 600;
-}
-
-li.nav-item {
-  padding: 10px;
-}
-
-li.nav-item:hover {
-  border-bottom: 1px solid #ffffff;
-}
-
-/* 最高の仕事に必要なもの全てを完備 */
-div.airbnb_descs {
-  height: auto;
-  margin: 5% 10%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-div.airbnb_desc p {
+div.course_descs h4 {
+  margin-top: 5%;
+  font-weight: 400;
   text-align: center;
-  font-size: 18px;
 }
 
-div.airbnb_desc img {
-  width: 100%;
-  height: 500px;
+div.course_descs p {
+  line-height: 1.8;
+}
+
+div.course_desc img {
   object-fit: cover;
 }
 
-/* 画像+説明 */
-div.img_desc {
-  margin: 0 2%;
+/* バンクーバーってどんな街？ */
+div.vancouver {
+  position: relative;
+  background: url("../src/vancouver.jpg");
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: 700px;
   margin-bottom: 5%;
 }
 
-div.img_descs {
-  height: auto;
-  margin-bottom: 1%;
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-div.img_descs img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-div.img_img1 {
-  width: 40%;
-  height: 600px;
-}
-
-div.img_desc1 {
-  background-color: #EBEBEB;
-  width: 70%;
-  height: auto;
-  position: relative;
-}
-
-div.img_desc1 a {
-  color: #006C70;
-}
-
-div.img_desc2 {
-  background-color: #006C70;
-  color: white;
-  width: 70%;
-  height: auto;
-  position: relative;
-}
-
-div.img_desc2 a {
-  color: white;
-}
-
-div.img_img2 {
-  width: 40%;
-  height: 600px;
-}
-
-div.img_desc_text {
+div.vancouver_text {
   position: absolute;
-  top: 50%;
+  top: 25%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -25%);
+  width: 50%;
+  color: white;
+}
+
+div.vancouver_text h2 {
+  margin-bottom: 5%;
+  font-size: 39px;
+  font-weight: 400;
+  text-align: center;
+}
+
+div.vancouver_text p {
+  line-height: 1.6;
+}
+
+
+/* カリキュラム */
+div.curriculum {
+  margin: 0 15%;
+}
+
+div.curriculum h2 {
+  font-size: 39px;
+  font-weight: 400;
+  margin-bottom: 5%;
+}
+
+div.curriculum h3 {
+  font-size: 24px;
+  font-weight: 400;
+  margin-bottom: 5%;
+}
+
+div.curriculum h4 {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+div.curriculum span {
+  font-size: 12px;
+  font-weight: 400;
+}
+
+div.curriculum_descs {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5% 0;
+  height: auto;
+}
+
+div.curriculum_desc {
+  display: flex;
+  flex: nowrap;
+  width: 50%;
+  height: auto;
+}
+
+div.curriculum_desc img{
+  width: 30%;
+  height: auto;
+  margin-right: 1%;
+}
+
+div.ccurriculum_text {
   text-align: left;
 }
 
-div.img_desc_text a::after {
-  content:" >";
-  padding-left: 1%;
-  text-decoration: none;
-	display: inline-block;
+div.ccurriculum_text h4 {
+  line-height: 1.8;
 }
 
-/* 概要説明 */
-div.descs {
-  width: 100%;
-  height: auto;
-  margin: 0;
-  margin-bottom: 5%;
-  padding: 3% 20%;
-  background-color: #006C70;
-  color: white;
-  text-align:center;
+div.ccurriculum_text p {
+  font-size: 16px;
+  font-weight: 400;
 }
 
-div.desc_text {
-  width: 80%;
+/* コース内容 */
+div.course {
+  margin: 0 15%;
+  margin-bottom: 3%;
 }
 
-div.desc_text a {
-  color: white;
+div.course table {
+  table-layout: auto;
+  border-style: solid;
+  border-color: #E5E5D1;
 }
 
-div.desc_text a::after {
-  content:" >";
-  padding-left: 1%;
-  text-decoration: none;
-	display: inline-block;
+div.course_detail p {
+  font-size: 16px;
+  font-weight: 700;
 }
 
-div.desc_text span {
-  color: white;
+div.course table td {
+  background: #F8F7F2;
+  padding: 10px 15px;
+}
+div.course table tr:nth-child(odd) td {
+	background: #fff;
 }
 
+/* 2週間のスケジュール */
+div.schedule {
+  margin: 0 15%;
+  margin-bottom: 3%;
+}
 
-/* 事例MARTA KUTT様 */
-div.case1 {
+div.schedule_detail p {
+  font-size: 16px;
+}
+
+div.schedule table {
+  table-layout: auto;
+  border-style: solid;
+  border-color: #E5E5D1;
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+div.schedule table td {
+	background: #F8F7F2;
+  padding: 10px 15px;
+}
+
+div.schedule table tr:nth-child(odd) td {
+	background: #fff;
+}
+
+/* 英会話講座 */
+div.en_course {
   margin: 0 15%;
   margin-bottom: 5%;
 }
 
-div.case1_descs {
-  height: auto;
-  margin-bottom: 1%;
+div.en_course_desc {
   display: flex;
-  flex-wrap: nowrap;
-}
-
-div.case1_descs img {
+  flex: nowrap;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  margin-bottom: 3%;
 }
 
-div.case1_img {
-  width: 75%;
-  height: 625px;
-}
-
-div.case1_desc {
-  background-color: #EBEBEB;
+div.en_course_desc img{
   width: 80%;
   height: auto;
+}
+
+div.en_course_text {
+
+  text-align: left;
+
+}
+
+/* バンクーバーで見つける、新しい自分 */
+div.find_yourself {
+  background: url("../src/find_yourself.jpg");
+  height: 320px;
+  background-size: cover;
+  background-position:50%;
   position: relative;
 }
 
-div.case1_desc_text {
+div.find_yourself::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(135,206,235,.6);
+}
+
+div.find_yourself_txt {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: left;
+  z-index: 1;
 }
 
-div.case1_desc_text h4 {
+div.find_yourself_txt h2 {
+  font-size: 39px;
+  font-weight: 400;
+  color: #FFF;
+  margin-bottom: 10%;
+}
+
+div.find_yourself_txt .btn_square {
+  display: inline-block;
+  font-size: 24px;
+  padding: 0.5em 2em;
+  text-decoration: none;
+  background: #6FC173;/*ボタン色*/
+  color: #FFF;
+  border-radius: 3px;
+  box-shadow: 0 3px 0 rgba(136,136,136,1);
+}
+
+  /*ボタンを押したとき*/
+  div.find_yourself_txt .btn_square:hover {
+  box-shadow: none;
+  transform: translate3d(0, 3px, 0);
+}
+
+/* 受講者の声 */
+div.experiences {
+  margin: 5% 15%;
+}
+
+div.experiences h2 {
+  text-align: center;
+  font-size: 39px;
+  font-weight: 400;
+}
+
+div.experiences_img{
+  width: 50%;
+  height: 50%;
+  margin-right: 5%;
+}
+
+/* 画像を丸に切り抜く */
+div.experiences_img img {
+  width: 150px;
+  height: auto;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+div.experiences_img p {
+  text-align: center;
+}
+
+div.experiences_desc {
+  display: flex;
+  flex: nowrap;
+  width: 50%;
+  height: auto;
+  margin-bottom: 3%;
+}
+
+div.experiences_text {
+  position: relative;
+  display: inline-block;
+  padding: 1.5em 0 1.5em 15px;
+  padding: 7px 10px;
+  min-width: 120px;
+  max-width: 100%;
+  color: #555;
+  font-size: 16px;
+  background: #F8F7F2;
+}
+
+div.experiences_text:before {
+  content: "";
+  position: absolute;
+  top: 10%;
+  left: -30px;
+  margin-top: -15px;
+  border: 15px solid transparent;
+  border-right: 15px solid #F8F7F2;
+}
+
+div.experiences_text p {
+  margin: 1.5em 0 1.5em 15px;
+}
+
+/* 講師紹介 */
+div.teach_color {
+  padding: 3% 0;
+  background-color: #F8F7F2;
+  margin-bottom: 5%;
+}
+
+div.teachers {
+  margin: 0 27%;
+}
+
+/* 画像を丸に切り抜く */
+div.teacher {
+}
+
+/* 画像を丸に切り抜く */
+div.teacher img {
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 5%;
+}
+
+div.teacher h4 {
+  margin-bottom: 5%;
+}
+
+div.teacher p {
   line-height: 1.8;
 }
 
-div.case1_desc_text span {
-  font-weight: 600;
+/* 受講までのステップ */
+div.steps {
+  margin: 0 15%;
+  margin-bottom: 5%;
 }
 
-/* お問い合わせ */
-div.form-group {
-  height: 450px;
-  padding: 4% 0 5% 0;
-  margin-bottom: 3%;
-  background-color: #EBEBEB;
-  text-align: center;
+div.steps h2 {
+  font-size: 39px;
+  margin-bottom: 5%;
 }
 
-div.form-group .form-control {
-  position: absolute;
-  background-color: #fefefe;
-  height: 50px;
-  top: 50%;
-  left: 0%;
-  transform: translateY(-50%);
+div.step ul {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding-left: 0;
 }
 
-div.form-group .btn {
-  font-size: 14px;
-  position: absolute;
-  height: 35px;
-  top: 50%;
-  right: 2%;
-  transform: translateY(-50%);
-}
-
-div.form_box {
-  width: 450px;
-  margin: 0 auto;
-  margin-bottom: 0;
-  text-align: left;
-}
-
-div.input_box {
-  width: 100%;
-  height: 100px;
+div.step ul li {
   position: relative;
-  border-radius: 5px;
-  margin-bottom: 15%;
+  padding-left: 8%;
+  min-height: 60px;
+  width: 45%;
+  counter-increment: li;
 }
 
-div.input_box::after {
-  content:"";
-  display:block;
-  width: 100%;
-  height: 3px;
-  background-color:#D8D8D8;
-  position:absolute;
-  bottom: -20px;
+div.step li::before {
+  content: counter(li);
+  color: #fff;
+  background: #5fb2c1;
+  border-radius: 50%;
+  font-size: 18px;
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
+  text-align: center;
+  display: block;
+  position: absolute;
+  top: 0;
   left: 0;
 }
 
-div.input_box label {
-  font-weight: 600;
+div.step {
+  display: flex;
+  flex-wrap: wrap;
+  height: auto;
 }
 
-div.form_text {
+div.step_limit span {
+  font-size: 12px;
+}
+
+
+/* 自信を持って帰国しよう。 */
+div.return {
+  background: url("../src/find_yourself.jpg");
+  height: 320px;
+  background-size: cover;
+  background-position:50%;
+  position: relative;
+  margin-bottom: 5%;
+}
+
+div.return::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(135,206,235,.6);
+}
+
+div.return_txt {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+div.return_txt h2 {
+  font-size: 39px;
+  font-weight: 400;
+  color: #FFF;
+  margin-bottom: 10%;
+}
+
+div.return_txt a.btn_square {
+  display: inline-block;
+  font-size: 24px;
+  padding: 0.5em 2em;
+  text-decoration: none;
+  background: #6FC173;/*ボタン色*/
+  color: #FFF;
+  border-radius: 3px;
+  box-shadow: 0 3px 0 rgba(136,136,136,1);
+}
+
+ /*ボタンを押したとき*/
+  div.return_txt a.btn_square:hover {
+  box-shadow: none;
+  transform: translate3d(0, 3px, 0);
+}
+
+/* これから必要とされるのは、グローバルに活躍できるあなた */
+div.global {
+  height: 300px;
+  margin: 0 20%;
+  margin-bottom: 5%;
+}
+
+div.global audio {
+  width: 100%;
+}
+
+div.global h2 {
+  font-size: 39px;
+  line-height: 1.8;
+  margin-bottom: 4%;
   text-align: center;
-  width: 110%;
 }
 
-div.form_text h2 {
-  font-size: 46px;
+div.global a {
+  text-decoration: underline;
+  color: #76b9c5;
 }
 
-div.form_text h4 {
-  font-size: 16px;
-  font-weight: 600;
+div.global a:hover {
+  color: #3b8a98;
 }
 
-div.form_text p {
+/* 料金 */
+div.price {
+  padding: 5% 0;
+  background-color: #F8F7F2;
+  margin-bottom: 5%;
+}
+
+div.prices {
+  margin: 0 15%;
+}
+
+div.prices h2 {
+  font-size: 39px;
+  margin-bottom: 3%;
+}
+
+div.price_lists {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-right: auto;
+  margin-left : auto;
+}
+
+div.prices table{
+  border-style: solid;
+  border-color: #E5E5D1;
+}
+
+div.price_list {
+  margin: 10px auto;
+  padding: 5px 35px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+div.price_list span {
+  font-size: 40px;
+}
+
+div.price_list p {
+  margin-bottom: 0;
+}
+
+div.price_list th {
+  padding: 10px 15px;
+}
+
+div.price_list tr.green {
+  background-color: #6FC173;
+  color: white;
+}
+
+div.price_list tr.on {
+  background-color: white;
+}
+div.price_list tr.off {
+  background-color: white;
+  color: #cccccc;
+}
+
+div.price_txt p {
+  font-size: 12px;
+}
+
+/* よくある質問 */
+div.faqs {
+  margin: 0 15%;
+  margin-bottom: 5%;
+}
+
+div.faqs h2 {
+  margin-bottom: 5%;
+}
+
+div.faqs h3 {
   margin-bottom: 1%;
 }
 
-div.form_text a {
-  color: #008489;
+div.faqs p {
+  line-height: 1.8;
+}
+
+div.faq {
+  margin-bottom: 2%;
+}
+
+/* お申し込み／お問い合わせ */
+div.req_inq {
+  background-color: #F8F7F2;
+  padding-top: 5%;
+}
+
+div.req_inq_box {
+  margin: 0 15%;
+  padding-bottom: 5%;
+}
+
+div.form_group {
+  margin: 0 26%;
+  margin-bottom: 2%;
+}
+
+div.form_group p {
   font-size: 14px;
 }
 
-div.form_text a::after {
-  content:" >";
-  padding-left: 1%;
-  text-decoration: none;
-	display: inline-block;
+div.form_textarea {
+  margin: 0 auto;
 }
 
-
-div.form_text span {
-  color: #008489;
-  font-size: 14px;
-}
-
-/* リンク集 */
-div.links {
-  margin: 0;
-}
-
-div.links p {
-  font-size: 12px;
-  font-weight: 700;
-}
-
-div.links ul {
-  padding: 0;
-}
-
-div.links li {
-  font-size: 14px;
-  margin-top: 5%;
-  /* line-height: 2.0; */
-}
 
 /* フッター */
-footer {
-  position: relative;
-  text-align: left;
-  padding: 20px 0;
-  font-size: 14px;
+div.footer {
+  background-color: #2B3F43;
+  height: 200px;
+  text-align: center;
+  padding-top: 2%;
 }
 
-footer::before {
-  content:"";
-  display:block;
-  width:100%;
-  height:1px;
-  background-color:#DDDDDD;
-  position:absolute;
-  top:0;
-  left:0;
+div.footer ul {
+  display: flex;
+	justify-content: center;
+  list-style: none;
 }
 
-footer a {
-  color: #484848;
+div.footer ul.footer_list li {
+  text-align: center;
+  margin: 0 20px;
+  color: #368A82;
+}
+
+div.footer ul.logo_list li {
+  margin: 0 30px;
+}
+
+div.footer a {
+  color: #348A98;
+  opacity: 0.8;
   text-decoration: none;
 }
 
-footer a:hover {
-  color: #484848;
+div.footer a:hover {
+  color: #348A98;
+  opacity: 1.0;
 }
 
-footer p {
-  margin-bottom: 0;
+div.logo_menu {
+  margin-bottom: 2%;
+}
+
+div.copyright p {
+  padding-left: 3%;
+  color: #6A7778;
+  font-size: 13px;
 }
 
 /* 極小デバイス（縦向きモバイル, 576px 未満） */
@@ -548,9 +826,6 @@ footer p {
 /* 特大デバイス（ワイド・デスクトップ, 1200px 以上） */
 @media (min-width: 1200px) {
 
-  img {
-    width: 100%;
-    height: auto;
-  }
+
 
  }
